--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,14 @@
 .dislike-color {
   color: #282c34;
 }
+
+.icon-p {
+  /* border: 2px solid whitesmoke; */
+  font-size: 20px;
+  /* justify-content: space-between; */
+}
+
+.icon {
+  font-size: 25px;
+  cursor: pointer;
+}
